fix alignment of auth section

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,6 +3,8 @@
 }
 
 * {
+	padding: 0;
+	margin: 0;
 	box-sizing: border-box;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -10,7 +12,7 @@
 
 #page-heading {
 	margin: 2em;
-	padding: 0em 2em;
+	padding: 2em 2em;
 	display: flex;
 
 	border-bottom: 1px solid darkgray;
@@ -34,13 +36,13 @@
 
 #auth-section {
 	position: absolute;
-	top: 5em;
+	top: 4em;
 	right: 5em;
 
 	display: flex;
 	gap: 1em;
-	justify-content: center;
-	align-items: center;
+	justify-content: flex-end;
+	align-items: flex-start;
 }
 
 #auth-section > * {
